
** svn add documentation

10-28-2009 - R. Scharpf committed v 1.9.1

** export TilingFeatureSet2, QuantificationSet

11-19-2009 - R. Scharpf committed v 1.9.2

** changed definition of SnpCallSetPlus extends SnpSet and SnpQSet

12-01-2009 - R. Scharpf committed v 1.9.7

** removed SnpLevelSet
** oligoSnpSet extends SnpSet

12-02-2009 - B. Carvalho committed v 1.9.9

** moved several methods to oligo
** trying to keepp only accessors and replace methods in oligoClasses
** exposing callsConfidence - until it comes from Biobase

12-10-2009 - B. Carvalho committed v 1.9.15

** added intensityFile slot to FeatureSet class, it'll be NA for regular
     use and the filename (full) for persistent storage

12-19-2009 - R. Scharpf committed v 1.9.17

** added man pages for AlleleSet, SnpSuperSet, and CNSet

12-20-2009 - R. Scharpf committed v 1.9.19

** removed SnpLevelClasses Vignette and supporting documents in inst/doc
** added man/Snp-methods.Rd 
** added man/list.cefiles.Rd

12-23-2009 - R. Scharpf committed v 1.9.21

** removed IRanges dependency.  Added a few .Rd files.  Note IRanges
   is still loaded because of Biostrings dependency on IRanges.  Do we
   need Biostrings?

12-30-2009 - R. Scharpf committed v 1.9.22

** removed segmentData from initialization method for CNSet objects

01-23-2010 - B. Carvalho committed v 1.9.25

** exported bothStrands()

01-28-2010 - B. Carvalho committed v 1.9.26

** changed confs() slightly to agree with oligo

02-07-2010 - B. Carvalho (1.9.27)

** Updated requirement on affyio so Win64 is supported

02-20-2010 - R. Scharpf (1.9.28)

** Added CopyNumberSet class as a container for total copy number with
   no slots for genotypes. (Mainly for use with VanillaICE)

** Defined methods for db, chromosome, position, and isSnp at the
   level of eSet (formerly, these were defined at the SnpSet level). I
   did this so that CopyNumberSet, which extends eSet directly, could
   inherit these methods